--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,12 @@ body {
 font-family: 'Roboto', sans-serif;
 }
 
-
+.carousel-item img { 
+    background-position: cover;
+    width: auto;
+    height: auto;
+    
+}
 
 
 
