--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,8 +3,33 @@ body {
 font-family: 'Roboto', sans-serif;
 }
 
+.hero1 { 
+    position:"relative";
+    width: "100vw";
+    height: "100vh";
+
+}
+
+.hero::before{
+    content:"2 em";
+    position:"absolute";
+    top: "1em";
+    left: 0;
+    width: "100%";
+    height: "100%";
+    background-repeat: "no-repeat";
+     
+}
+
+
+
+.hero-content {
+    position: relative;
+}
+
 .carousel-item img { 
-    background-position: cover;
+    margin: 2em;
+    object-position: cover;
     width: auto;
     height: auto;
     
